# serializer version: 1
# name: test_read
  '''
  all.as
  Atoms(symbols='S4Mo2', pbc=True, cell=[[3.19031572, 0.0, 0.0], [-1.59515786, 2.76289446, 0.0], [0.0, 0.0, 14.87900448]], initial_magmoms=...)
  '''
# ---
# name: test_read.1
  '''
  fixxyz.as
  Atoms(symbols='S4Mo2', pbc=True, cell=[[3.19031572, 0.0, 0.0], [-1.59515786, 2.76289446, 0.0], [0.0, 0.0, 14.87900448]])
  '''
# ---
# name: test_read.2
  '''
  fixxyzmagxyz.as
  Atoms(symbols='S4Mo2', pbc=True, cell=[[3.19031572, 0.0, 0.0], [-1.59515786, 2.76289446, 0.0], [0.0, 0.0, 14.87900448]], initial_magmoms=...)
  '''
# ---
# name: test_read.3
  '''
  lat.as
  Atoms(symbols='S4Mo2', pbc=True, cell=[[3.19031572, 0.0, 0.0], [-1.59515786, 2.76289446, 0.0], [0.0, 0.0, 14.87900448]])
  '''
# ---
# name: test_read.4
  '''
  mag.as
  Atoms(symbols='Ni2O2', pbc=True, cell=[[4.1684, 2.0842, 2.0842], [2.0842, 4.1684, 2.0842], [2.0842, 2.0842, 4.1684]], initial_magmoms=...)
  '''
# ---
# name: test_read.5
  '''
  magxyz.as
  Atoms(symbols='Ni2O2', pbc=True, cell=[[4.1684, 2.0842, 2.0842], [2.0842, 4.1684, 2.0842], [2.0842, 2.0842, 4.1684]], initial_magmoms=...)
  '''
# ---
